--- a/src/user comments/styles.scss
+++ b/src/user comments/styles.scss
@@ -63,6 +63,7 @@
             border: 2px solid #00724e;
             border-top: none;
             border-right: none;
+            border-radius: 0 0 0 5px;
             top: 0;
             left: 20px;
             width: 20px;
